Refactor : llm추천 사용자 입력 및 응답 reason 저장 로직 (#17)
* fix : userCuration 에러페이지 html 호출 순서 수정

* Refactor: 클래스명의 Transactional 정리, 미사용 import 정리, 미사용 메서드 정리 등

* Refactor: LLMQuestion 관련 User와의 의존 관계 제거, 사용자 입력값 및 llm 추천 reason 저장

* comment: print되는 응답 기록 제거