@@ -7,7 +7,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -16,12 +15,13 @@ public class RestaurantSearchService {
     private final RestaurantRepository restaurantRepository;
 
     public List<SearchRestaurantResponseDto> searchByName(String restaurantKeyword){
-        if (restaurantKeyword == null || restaurantKeyword.trim().isEmpty()) {
+        if (restaurantKeyword.isBlank() || restaurantKeyword.trim().isBlank()) {
             throw new IllegalArgumentException("검색어를 입력하세요");
         }
+
         List<Restaurant> restaurants = restaurantRepository.findByNameContainingAndActivatedIsTrue(restaurantKeyword);
         return restaurants.stream()
-                .map(restaurant -> SearchRestaurantResponseDto.fromEntity(restaurant))
-                .collect(Collectors.toList());
+                .map(SearchRestaurantResponseDto::fromEntity)
+                .toList();
     }
 }
